added new option "PropagationDelay", which sets the minimum post age to download; newer posts are kept on hold in download queue until they get older than the defined delay, after that they are downloaded
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@965 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -739,6 +739,14 @@ ReloadPostQueue=yes
 # the file was completed.
 ContinuePartial=yes
 
+# Propagation delay to your news servers (minutes).
+#
+# The option sets minimum post age for nzb-files. Very recent files
+# are not downloaded to avoid download failures. The files remain 
+# on hold in the download queue until the propagation delay expires,
+# after that they are downloaded.
+PropagationDelay=0
+
 # Decode articles (yes, no).
 #
 # yes - decode articles using internal decoder (supports yEnc and UU formats);
