refactor: moved speed meter code from "QueueCoordinator" into new module "StatMeter"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@969 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,6 +62,8 @@ nzbget_SOURCES = \
 	daemon/nntp/NNTPConnection.h \
 	daemon/nntp/ServerPool.cpp \
 	daemon/nntp/ServerPool.h \
+	daemon/nntp/StatMeter.cpp \
+	daemon/nntp/StatMeter.h \
 	daemon/postprocess/ParChecker.cpp \
 	daemon/postprocess/ParChecker.h \
 	daemon/postprocess/ParCoordinator.cpp \
