added collecting of download volume statistics data per news server; in web-interface the data is shown as chart in "Statistics and Status" dialog; new RPC-method "servervolumes" returns the collected data
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@973 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -211,6 +211,10 @@ webui_FILES = \
 	webui/lib/bootstrap.css  \
 	webui/lib/jquery.js \
 	webui/lib/jquery.min.js \
+	webui/lib/raphael.js \
+	webui/lib/raphael.min.js \
+	webui/lib/elycharts.js \
+	webui/lib/elycharts.min.js \
 	webui/img/icons.png \
 	webui/img/icons-2x.png \
 	webui/img/transmit.gif \
