updated options descriptions in template config file
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@976 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -744,11 +744,11 @@ Decode=yes
 
 # Write decoded articles directly into destination output file (yes, no).
 #
-# Files are posted to Usenet within artilce bodies. Each file typically
+# Files are posted to Usenet in multiple pieces (articles). Each file typically
 # requires hundreds of articles.
 #
 # When option <DirectWrite> is disabled, the program downloads all articles
-# into temporary directory and then combine them into destination file.
+# into temporary directory and then combines them into destination file.
 #
 # With this option enabled the program at first creates the output
 # destination file with required size (total size of all articles),
@@ -761,27 +761,17 @@ Decode=yes
 # like EXT3 on Linux or NTFS on Windows.
 #
 # Using of this option reduces disk operations but may produce more fragmented
-# files (depends on disk driver), which may slow down the post-processing.
-# It's recommended to test how the option behave on your platform to find the
-# best setting.
+# files (depends on disk driver), which may slow down the unpack.
 #
-# INFO: a particular test on a Linux router with EXT3-partition showed that
-# activating of this option results in up to 20% better performance during
-# downloading.
-#
-# NOTE: For test try to download few big nzb-collections (each 4GB or more)
-# and measure the time used for downloading and post-processing (use timestamps
-# in a log-file to determine when the post-processing was ended).
-#
-# NOTE: When option <DirectWrite> is enabled the temporary directory (option
-# <TempDir>) must be located on the same partition with destination directory
-# (option DestDir>) for better performance. If option <DirectWrite> is disabled
-# it's better to use different drives for temporary and destination directories.
+# NOTE: It's recommended to test how the option behave on your platform to find the
+# best setting. For test try to download few big nzb-files (each 4GB or more)
+# and measure the time used for download and unpack (use timestamps
+# in the log-file to determine when the unpack was ended).
 #
 # NOTE: If both options <DirectWrite> and <ContinuePartial> are enabled,
 # the program still creates empty article-files in temp-directory. They are used
-# by the option <ContinuePartial> to check if a certain article was downloaded.
-# To minimize disk-io it is recommended to disable option <ContinuePartial>,
+# by the option <ContinuePartial> to check if a certain article was
+# downloaded. To minimize disk-io it is recommended to disable option <ContinuePartial>,
 # if <DirectWrite> is enabled. Especially on a fast connections (where you
 # would want to activate <DirectWrite>) it should not be a problem to redownload
 # an interrupted file.
