updated all links to go to new domain (nzbget.net)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@978 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -81,7 +81,7 @@ WebDir=
 # Directory with post-processing scripts.
 #
 # NOTE: For information on writing post-processing scripts visit
-# http://nzbget.sourceforge.net/Post-processing_scripts.
+# http://nzbget.net/Post-processing_scripts.
 ScriptDir=${MainDir}/ppscripts
 
 # Lock-file for daemon-mode, POSIX only.
@@ -182,7 +182,7 @@ Server1.Encryption=no
 # chooses the cipher automatically. To achieve the best performance
 # however you can manually select a faster cipher.
 #
-# See http://nzbget.sourceforge.net/Choosing_a_cipher for details.
+# See http://nzbget.net/Choosing_a_cipher for details.
 #
 # NOTE: One of the fastest cipher is RC4, it also provides strong 128 bit
 # encryption. To select it use the cipher string "RC4-MD5" (if NZBGet was
@@ -382,7 +382,7 @@ Category4.Name=Software
 #
 # MORE INFO:
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.sourceforge.net/RSS.
+# http://nzbget.net/RSS.
 #
 # Feed filter consists of rules - one rule per line. Each rule defines
 # a search string and a command, which must be performed if the search
@@ -505,7 +505,7 @@ Category4.Name=Software
 # 5) Q: HDTV.
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.sourceforge.net/RSS.
+# http://nzbget.net/RSS.
 #Feed1.Filter=
 
 # How often to check for new items (minutes).
@@ -706,7 +706,7 @@ NzbAddedProcess=
 # set to "Delete" or "None". If it is set to "Pause" you will need to
 # manually unpause another duplicate (if any exists in queue).
 #
-# NOTE: For more info on duplicates see http://nzbget.sourceforge.net/RSS.
+# NOTE: For more info on duplicates see http://nzbget.net/RSS.
 DupeCheck=yes
 
 
@@ -1315,11 +1315,11 @@ SevenZipCmd=7z
 # already queued downloads.
 #
 # NOTE: For the list of interesting post-processing scripts see
-# http://nzbget.sourceforge.net/Catalog_of_post-processing_scripts.
+# http://nzbget.net/Catalog_of_post-processing_scripts.
 #
 # INFO FOR DEVELOPERS:
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.sourceforge.net/Post-processing_scripts.
+# http://nzbget.net/Post-processing_scripts.
 #
 # NZBGet passes following arguments to post-processing script as environment
 # variables:
@@ -1407,7 +1407,7 @@ SevenZipCmd=7z
 # All other return codes are interpreted as failure (status = FAILURE).
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.sourceforge.net/Post-processing_scripts.
+# http://nzbget.net/Post-processing_scripts.
 DefScript=
 
 # Execution order for scripts.
