changed the way option "ContinuePartial" works: now the information about completed articles is stored in a special file in QueueDir; when option "DirectWrite" is active no separate flag-files per article are created in TempDir; the file contains additional information, which were not stored/available before; fixed: per-server/per-nzb article completion statistics could be inaccurate for nzb-files whose download were interrupted by reload/restart; per-server/per-nzb article completion statistics are now available via RPC-method "listgroups" for active downloads (not only for "history")
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@982 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -247,7 +247,7 @@ ControlPort=6789
 #
 # Set to empty value to disable user name check (check only password).
 #
-# NOTE: this option was added in NZBGet 11. Older versions used predefined
+# NOTE: This option was added in NZBGet 11. Older versions used predefined
 # not changeable user name "nzbget". Third-party tools or web-sites written
 # for older NZBGet versions may not have an option to define user name. In
 # this case you should set option <ControlUsername> to the default value
@@ -702,7 +702,7 @@ NzbAddedProcess=
 # fails another duplicate is tried. If download succeeds all remaining
 # duplicates are deleted from queue.
 #
-# NOTE: for automatic duplicate handling option <HealthCheck> must be
+# NOTE: For automatic duplicate handling option <HealthCheck> must be
 # set to "Delete" or "None". If it is set to "Pause" you will need to
 # manually unpause another duplicate (if any exists in queue).
 #
@@ -721,10 +721,15 @@ SaveQueue=yes
 # Reload download queue on start, if it exists (yes, no).
 ReloadQueue=yes
 
-# Reuse articles saved in temp-directory from previous program start (yes, no).
+# Continue download of partially downloaded files (yes, no).
 #
-# This allows to continue download of file, if program was exited before
-# the file was completed.
+# If active the current state is saved after every article download and
+# reloaded after restart. This is about files included in download jobs (usually
+# rar-files), not about download-jobs (nzb-files) itself. Download-jobs are always
+# continued regardless of that option.
+#
+# Disabling this option might slighlty reduce disk access and is
+# therefore recommended on fast connections.
 ContinuePartial=yes
 
 # Propagation delay to your news servers (minutes).
@@ -767,14 +772,6 @@ Decode=yes
 # best setting. For test try to download few big nzb-files (each 4GB or more)
 # and measure the time used for download and unpack (use timestamps
 # in the log-file to determine when the unpack was ended).
-#
-# NOTE: If both options <DirectWrite> and <ContinuePartial> are enabled,
-# the program still creates empty article-files in temp-directory. They are used
-# by the option <ContinuePartial> to check if a certain article was
-# downloaded. To minimize disk-io it is recommended to disable option <ContinuePartial>,
-# if <DirectWrite> is enabled. Especially on a fast connections (where you
-# would want to activate <DirectWrite>) it should not be a problem to redownload
-# an interrupted file.
 DirectWrite=yes
 
 # Check CRC of downloaded and decoded articles (yes, no).
@@ -1055,7 +1052,7 @@ UpdateInterval=200
 #
 # Examples: "08:00", "00:00,06:00,12:00,18:00", "*:00", "*:00,*:30".
 #
-# NOTE: also see option <TimeCorrection>.
+# NOTE: Also see option <TimeCorrection>.
 #Task1.Time=08:00
 
 # Week days to execute the command (1-7).
@@ -1156,7 +1153,7 @@ ParRepair=yes
 #            detects missing files, it scans other files in the 
 #            directory until all required files are found.
 #
-# NOTE: for par-check/repair NZBGet uses library libpar2. The widely
+# NOTE: For par-check/repair NZBGet uses library libpar2. The widely
 # used version 0.2 of the library has few bugs, sometimes causing
 # a crash of the program. This is especially true when using "full" or
 # "auto" par-scan. NZBGet is supplied with patches addressing these
@@ -1181,7 +1178,7 @@ ParRename=yes
 #  Pause  - pause nzb-file;
 #  None   - do nothing (continue download).
 #
-# NOTE: for automatic duplicate handling option must be set to "Delete"
+# NOTE: For automatic duplicate handling option must be set to "Delete"
 # or "None". If it is set to "Pause" you will need to manually unpause
 # another duplicate (if any exists in queue). See also option <DupeCheck>.
 HealthCheck=delete
