added force-priorities; downloads with priorities equal to or greater than 900 are downloaded and post-processed even if the program is in paused state (force mode);  in web-interface the combo for choosing priority has new entry "force" (priority value 900); new fields "ForcedSizeLo", "ForcedSizeHi" and "ForcedSizeMB" returned by RPC-method "status";
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1000 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -525,9 +525,11 @@ Category4.Name=Software
 # Priority for added nzb-files (number).
 #
 # Priority can be any integer value. The web-interface however operates
-# with only five predefined priorities: -100 (very low priority), -50
+# with only six predefined priorities: -100 (very low priority), -50
 # (low priority), 0 (normal priority, default), 50 (high priority),
-# 100 (very high priority).
+# 100 (very high priority) and 900 (force priority). Downloads with
+# priorities equal to or greater than 900 are downloaded and
+# post-processed even if the program is in paused state (force mode).
 #Feed1.Priority=0
 
 
@@ -607,12 +609,16 @@ NzbDirFileAge=60
 #   echo "[NZB] PRIORITY=-100";
 #
 # Although priority can be any integer value, the web-interface operates
-# with five predefined priorities:
+# with six predefined priorities:
 # -100 - very low priority;
 # -50  - low priority;
 # 0    - normal priority (default);
 # 50   - high priority;
-# 100  - very high priority.
+# 100  - very high priority;
+# 900  - force priority.
+#
+# Downloads with priorities equal to or greater than 900 are downloaded and
+# post-processed even if the program is in paused state (force mode).
 #
 # To assign post-processing parameters:
 #   echo "[NZB] NZBPR_myvar=my value";
